--- a/index.html
+++ b/index.html
@@ -15,45 +15,15 @@
   <script src="ex06-12.js"></script>
   <script src="ex06-13.js"></script>
   <script src="ex07-1.js"></script>
-  <script src="ex07-3.js"></script>
-  <script src="ex07-4.js"></script>
-  <script src="ex07-5.js"></script>
-  <script src="ex07-8.js"></script>
-  <script src="ex08-1.js"></script>
-  <script src="ex09-2.js"></script>
   
 </head>
 
 <body>
-  <h1>変数の練習65</h1>
-  <input type="button" value="あいさつ" onclick="sayhello65();">
-  <input type="button" value="太郎" onclick="taro65();">
-  <input type="button" value="花子" onclick="hanako65();">
-
-  <h1>変数の練習2 66</h1>
-  <input type="button" value="あいさつ" onclick="sayhello66();">
-  <input type="button" value="太郎" onclick="taro66();">
-  <input type="button" value="花子" onclick="hanako66();">
-
-  <h1>引数の練習67</h1>
-  <input type="button" value="あいさつ" onclick="sayhello67();">
-  <input type="button" value="太郎" onclick="someone('太郎');">
-  <input type="button" value="花子" onclick="someone('花子');">
-
-  <h1>引数の練習2 67</h1>
-  <input type="button" value="あいさつ" onclick="sayhello67();">
-  <input type="button" value="太郎" onclick="someone('太郎');">
-  <input type="button" value="花子" onclick="someone('花子');">
-  <input type="button" value="レイ" onclick="someone('レイ');">
-  <input type="button" value="シンジ" onclick="someone('シンジ');">
-  <input type="button" value="アスカ" onclick="someone('アスカ');">
-
-  <h1>JavaScriptによる変更の練習68</h1>
-  <input type="button" value="あいさつ" onclick="sayhello68();">
-  <input type="button" value="太郎" onclick="taro68();">
-  <input type="button" value="花子" onclick="hanako68();">
-  <p id="who68">最初はworld</p>
-
+  <h1></h1>
+  <input type="button" value="あいさつ" onclick="sayhello71();">
+  <p>こんにちは　<input type="text" id="who71"></p>
+  
+  
   <h1>JavaScriptによるページの変更69</h1>
     <div id="txt1" >
       <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
@@ -90,45 +60,16 @@
   <img src='./image/josai.png' id="logo2" alt="Josai Logo">
   <br>
   
-  <h1>タイマーイベントによる実行の応用6-13</h1>
+  <h1></h1>
   <div id="back">
       <input type="button" value="変更後3秒でまた戻る" 
              onclick="ChangeImageAndBack();">
     
-  <img src='./image/josai.png' id="img13" alt="Josai Logo" class="imagechange">
+  <img src='./image/IMG_0166.png' id="img13" alt="Josai" class="imagechange">
   </div>
   <br>
   <br>
-  <h1>テキスト入力の練習　7-1</h1>
-  <input type="button" value="あいさつ" onclick="sayhello71();">
-  <p>誰？<input type="text" id="who71"></p>
   
-  <h1>足し算 7-3</h1>
-  <p>
-    <input type="text" id="input1"> + <input type="text" id="input2">
-    <input type="button" value="計算" onclick="add();">
-  </p>
- 
- <h1>ボディマス 7-4</h1>
-  <p>
-    <input type="text" id="input3"> / <input type="text" id="input4">*<input type="text" id="input4">
-    <input type="button" value="計算" onclick="add();">
-  </p>
-  
-  <h1>なぞなぞ 7-5</h1>
-  <p>目を閉じていないと見られないものはなーに？</p>
-  <p>
-    答(漢字1文字で):<input type="text" id="answer">
-    <input type="button" value="解答" onclick="nazo();">
-  </p>
-  
- <h1>なぞなぞ2 7-8</h1>
-  <input type="text" id="answer2">
-  <input type="button" value="解答" onclick="nazo2();">
-  
- <h1>JavaScriptの変数とデバッガを理解09-2</h1>
- <p>下のボタンを押すと数字が表示されます</p>
- <p><input type="button" value="実行ボタン" onclick="addCount()"></p>
   
 </body>
 
