--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
   <meta charset="UTF-8"> zm17488 濱安沙恵
   <title>期末プロジェクト</title>
+  
+  <link rel="stylesheet"href="my1.css">
 
-  <script src="ex06-5.js"></script>
-  <script src="ex06-6.js"></script>
-  <script src="ex06-7.js"></script>
-  <script src="ex06-8.js"></script>
   <script src="ex06-9.js"></script>
   <script src="ex06-10.js"></script>
-  <script src="ex06-11.js"></script>
   <script src="ex06-12.js"></script>
   <script src="ex06-13.js"></script>
   <script src="ex07-1.js"></script>
@@ -21,53 +18,39 @@
 <body>
   <h1></h1>
   <input type="button" value="あいさつ" onclick="sayhello71();">
-  <p>こんにちは　<input type="text" id="who71"></p>
+  <p><input type="text" id="who71"></p>
   
   
-  <h1>JavaScriptによるページの変更69</h1>
+  <h1></h1>
     <div id="txt1" >
-      <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
+      <input type="button" value="♪" onclick="txtchange1();">寮生</div>
 <br>
     <div id="image1" >
-      <input type="button" value="画像の変更" onclick="imgchange1();">
-  <img src='./image/josai.png' id="logo" alt="Josai Logo"></div>
-<br>
-
-  
-  <h1>タイマーイベントによる実行6-10</h1>
-<form name="timer"> 
-<input type="button" value="スタート" onclick="startfnc()">
-<br> 
-<input type="text" name="moji" size="30" value=""> 
-</form>
+      <input type="button" value="♪♪" onclick="imgchange1();">
+  <img src='./image/IMG_0241.png' id="logo" alt="Josai Logo"></div>
 <br>
   
-<form> 
-  <input type="button" value="Timer" onclick="setTimeout('mes()',3000)"> 
-</form>
-<br>
-  
-  <h1>タイマーイベントによる実行6-11</h1>
- <form name="timer2"> 
-<input type="button" value="スタート" onclick="hyoji2()">
-<br> 
-<input type="text" name="moji2" size="30" value=""> 
-</form>
+  <h1>2年生</h1>
+      <input type="button" value="☆" onclick="ThreeSecChange();">
+  <img src='./image/IMG_1142.png' id="logo2" alt="Josai Logo">
   <br>
   
-  <h1>タイマーイベントによる実行6-12</h1>
-      <input type="button" value="3秒で変更" onclick="ThreeSecChange();">
-  <img src='./image/josai.png' id="logo2" alt="Josai Logo">
+  <h1>4年生</h1>
+  <div id="back">
+      <input type="button" value="♡" 
+             onclick="ChangeImageAndBack();">
+    
+  <img src='./image/IMG_0165.png' id="img13" alt="Josai" class="imagechange">
+  </div>
+  <br>
   <br>
   
   <h1></h1>
-  <div id="back">
-      <input type="button" value="変更後3秒でまた戻る" 
-             onclick="ChangeImageAndBack();">
-    
-  <img src='./image/IMG_0166.png' id="img13" alt="Josai" class="imagechange">
-  </div>
-  <br>
+ <form name="timer2"> 
+<input type="button" value="ポチっと" onclick="hyoji2()">
+<br> 
+<input type="text" name="moji2" size="30" value=""> 
+</form>
   <br>
   
   
